feat: added auth apis
